# x3fuse-core

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
crates/x3f-cli/: Cargo.toml
crates/x3f-cli/src/: main.rs
crates/x3f-cli/tests/: README.md  tier2_md5.rs  tier3_perceptual.rs
crates/x3f-cli/tests/common/: mod.rs
crates/x3f-core/: Cargo.toml
crates/x3f-core/examples/: wasi_from_bytes.rs
crates/x3f-core/src/: globals.rs  icc.rs  image.rs  lib.rs
crates/x3f-core/src/output/: mod.rs  ppm.rs  tiff.rs
crates/x3f-core/src/output/dng/: exif.rs  hue_sat_map.rs  ljpeg.rs  metadata.rs  mod.rs  opcodes.rs  profiles.rs  strip.rs  tags.rs  tiff_writer.rs  tone_curves.rs
crates/x3f-core/tests/: from_bytes.rs  wasm_runtime_smoke.rs
crates/x3f-ffi-c/: Cargo.toml  build.rs  cbindgen.toml
crates/x3f-ffi-c/scripts/: build-xcframework.sh
crates/x3f-ffi-c/src/: lib.rs
crates/x3f-ffi-c/tests/: c_abi_smoke.rs
crates/x3f-sys/: Cargo.toml  build.rs  wrapper.h
crates/x3f-sys/csrc/: denoise_stub.c  x3f_denoise.cpp  x3f_denoise.h  x3f_denoise_utils.h  x3f_printf.c  x3f_printf.h  x3f_process.h
crates/x3f-sys/src/: denoise.rs  entropy.rs  highlight.rs  histogram.rs  histogram_wasm_stub.rs  image.rs  io.rs  lib.rs  load.rs  matrix.rs  meta.rs  print_meta.rs  print_meta_wasm_stub.rs  process.rs  quattro.rs  spatial_gain.rs  sysabi.rs  wasm_c_shims.rs
docs/: PORT-PLAN.md  book.toml
docs/src/: README.md  SUMMARY.md  contributing.md  ffi.md  format.md  performance.md  pipeline.md  port-plan.md  workspace.md
opcodes/: README.md
x3f.xcodeproj/: project.pbxproj
x3f.xcodeproj/project.xcworkspace/xcuserdata/sang.xcuserdatad/: UserInterfaceState.xcuserstate
x3f.xcodeproj/xcshareddata/xcschemes/: x3f_extract.xcscheme
x3f.xcodeproj/xcuserdata/sang.xcuserdatad/xcschemes/: xcschememanagement.plist
