[workspace]
resolver = "2"
members = [
    "crates/x3f-sys",
    "crates/x3f-core",
    "crates/x3f-cli",
    "crates/x3f-ffi-c",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/sanglee/x3f"
readme = "README.md"
keywords = ["foveon", "x3f", "sigma", "raw", "dng"]

[workspace.dependencies]
x3f-sys = { path = "crates/x3f-sys", version = "0.1.0" }
x3f-core = { path = "crates/x3f-core", version = "0.1.0" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# x3f-sys re-exports raw bindings; bindgen output trips many of these. The
# sys crate opts out of these lints in its own Cargo.toml.
