[package]
name = "x3f-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["multimedia::images"]
description = "Safe Rust API for reading and converting Sigma Foveon X3F raw images."

[dependencies]
x3f-sys.workspace = true
thiserror.workspace = true
libc = "0.2"
tiff = "0.10"
flate2 = "1"
# M7d: rayon par_iter over DNG strips. Each strip's horizontal-predictor
# + zlib pass is independent (no cross-strip state) and zlib dominates
# DNG output wall-time on uncompressed inputs.
rayon = "1.10"

[lints]
workspace = true
